# chat-app

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: cmake-multi-platform.yml
include/server/: server.h
include/sockets/: .sockets.h.swp  sockets.h
src/server/: server.c
src/sockets/: .sockets.c.swp  sockets.c
tests/: CMakeLists.txt  test_main.c
